src/objects/CustomObject1__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>지역</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>창고</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>창고1</fullName>
                </value>
                <value>
                    <fullName>창고2</fullName>
                </value>
                <value>
                    <fullName>창고3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>상태</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>판매</fullName>
                </value>
                <value>
                    <fullName>환불</fullName>
                </value>
                <value>
                    <fullName>폐기</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>s__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>제품s</label>
        <referenceTo>s__c</referenceTo>
        <relationshipLabel>창고</relationshipLabel>
        <relationshipName>go</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>창고</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>창고 Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>